added openapi ui and delete user endpoint
