# src/main/java/com/example/apidemo/endpoints/translator/LoginDataTranslator.java
@@ -1,0 +1,16 @@
+package com.example.apidemo.endpoints.translator;
+
+import com.example.apidemo.domain.model.LoginData;
+import com.example.apidemo.rest.model.LoginDataV1;
+import jakarta.enterprise.context.ApplicationScoped;
+
+@ApplicationScoped
+public class LoginDataTranslator {
+
+    public LoginData toDomain(LoginDataV1 loginDataV1) {
+        LoginData loginData = new LoginData();
+        loginData.setEmail(loginDataV1.getEmail());
+        loginData.setPassword(loginDataV1.getPassword());
+        return loginData;
+    }
+}
